kube/deploy/core/secrets/external-secrets/app/netpol.yaml
---
# yaml-language-server: $schema=https://crds.jank.ing/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app external-secrets
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: onepassword-connect
      toPorts:
        - ports:
            - port: "8443"
              protocol: "TCP"
            - port: "8443"
              protocol: "UDP"
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: "TCP"
            - port: "6443"
              protocol: "UDP"
    # 1Password Connect
    - toFQDNs: &dns
        - matchPattern: "1password.com"
        - matchPattern: "*.1password.com"
        - matchPattern: "1passwordusercontent.com"
        - matchPattern: "*.1passwordusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "ANY"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns: *dns
